--- a/shop/bin/src/main/resources/application.properties
+++ b/shop/bin/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-server.port=8086
+server.port=8083
 # JSP
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
@@ -8,13 +8,13 @@ spring.mvc.view.suffix=.jsp
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=hr
-spring.datasource.password=0207
+spring.datasource.password=hr
 
 #spring.servlet.multipart.location=C:\\shopimg
 
 mybatis.mapper-locations: static/mappers/*Mapper.xml
 
-#한글 인코딩
+
 server.servlet.encoding.charset=EUC-KR
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
